refactoring of the login system; development of the user system: user page, editing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -54,6 +54,9 @@
 @import "pages/mods/mods-single-page";
 @import "pages/mods/mods-index";
 
+// user
+@import "pages/user/menu-button";
+
 // common
 @import "pages/errors";
 //@import "pages/login";
